/*
Copyright 2020 The arhat.dev Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package abbot;

option go_package = "arhat.dev/abbot-proto/abbotgopb";

message DriverBridge {
  string alias = 1;
  int32 tx_queue_len = 2;
  bool promisc = 3;

  // bridge options
  bool hairpin = 11;
  bool guard = 12;
  bool fastLeave = 13;
  bool root_block = 14;
  bool learning = 15;
  bool flood = 16;
  bool proxy_arp = 17;
  bool proxy_arp_wifi = 18;
}
