/*
Copyright 2019 The arhat.dev Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package abbot;

option go_package = "arhat.dev/abbot-proto/abbotgopb";

message DriverWireguard {
  message Peer {
    string public_key = 1;
    string pre_shared_key = 2;
    string endpoint = 3;

    // duration in seconds
    int32 persistent_keepalive_interval = 4;
    repeated string allowed_ips = 5;
  }

  message Routing {
    bool enabled = 1;

    // Table to add routes, if not set (0), will use default route table
    int32 table = 2;

    // FirewallMark specifies a device's firewall mark
    int32 firewall_mark = 3;
  }

  // LogLevel for wireguard output
  string log_level = 1;

  // PrivateKey specifies a private key configuration
  string private_key = 2;

  // ListenPort specifies a device's listening port, if >= 0.
  int32 listen_port = 3;

  Routing routing = 4;

  // Peers specifies a list of peer configurations to apply to a device.
  repeated Peer peers = 5;
}
